// Jest Snapshot v1, https://goo.gl/fbAQLP @generated

exports[`Configure with a wallet 1`] = `
<div
  className="ant-spin-nested-loading"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning"
    >
      <span
        aria-label="loading"
        className="anticon anticon-loading anticon-spin cashLoadingIcon ant-spin-dot"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      className="sc-kGXeez ldTGry"
    >
      <h2>
        <span
          aria-label="copy"
          className="anticon anticon-copy sc-htpNat fLtATP"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
         Backup your wallet
      </h2>
      <div
        className="ant-alert ant-alert-warning ant-alert-with-description"
        data-show={true}
        role="alert"
        style={
          Object {
            "marginBottom": "12px",
          }
        }
      >
        <span
          aria-label="exclamation-circle"
          className="anticon anticon-exclamation-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="exclamation-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
        <div
          className="ant-alert-content"
        >
          <div
            className="ant-alert-message"
          />
          <div
            className="ant-alert-description"
          >
            Your seed phrase is the only way to restore your wallet. Write it down. Keep it safe.
          </div>
        </div>
      </div>
      <div
        className="ant-collapse ant-collapse-icon-position-left sc-bdVaJa AfOYf"
        role={null}
      >
        <div
          className="ant-collapse-item"
        >
          <div
            aria-expanded={false}
            className="ant-collapse-header"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-label="right"
              className="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            Click to reveal seed phrase
          </div>
        </div>
      </div>
      <div
        className="sc-kpOJdX eglhol"
      />
      <h2>
        <span
          aria-label="wallet"
          className="anticon anticon-wallet sc-ifAKCX cYbSut"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="wallet"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 464H528V448h312v128zm0 264H184V184h656v200H496c-17.7 0-32 14.3-32 32v192c0 17.7 14.3 32 32 32h344v200zM580 512a40 40 0 1080 0 40 40 0 10-80 0z"
            />
          </svg>
        </span>
         Manage Wallets
      </h2>
      <button
        className="sc-VigVT RpRhe"
        onClick={[Function]}
      >
        <span
          aria-label="plus-square"
          className="anticon anticon-plus-square"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus-square"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
            />
            <path
              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         New Wallet
      </button>
      <button
        className="sc-jTzLTM bLkbAy"
        onClick={[Function]}
      >
        <span
          aria-label="import"
          className="anticon anticon-import"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="import"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M888.3 757.4h-53.8c-4.2 0-7.7 3.5-7.7 7.7v61.8H197.1V197.1h629.8v61.8c0 4.2 3.5 7.7 7.7 7.7h53.8c4.2 0 7.7-3.4 7.7-7.7V158.7c0-17-13.7-30.7-30.7-30.7H158.7c-17 0-30.7 13.7-30.7 30.7v706.6c0 17 13.7 30.7 30.7 30.7h706.6c17 0 30.7-13.7 30.7-30.7V765.1c0-4.3-3.5-7.7-7.7-7.7zM902 476H588v-76c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-76h314c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
         Import Wallet
      </button>
      <div
        className="sc-kpOJdX eglhol"
      />
      [
      <a
        className="sc-jzJRlG lcaLuD"
        href="https://docs.cashtabapp.com/docs/"
        rel="noreferrer"
        target="_blank"
        type="link"
      >
        Documentation
      </a>
      ]
    </div>
  </div>
</div>
`;

exports[`Configure without a wallet 1`] = `
<div
  className="ant-spin-nested-loading"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning"
    >
      <span
        aria-label="loading"
        className="anticon anticon-loading anticon-spin cashLoadingIcon ant-spin-dot"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      className="sc-kGXeez ldTGry"
    >
      <h2>
        <span
          aria-label="copy"
          className="anticon anticon-copy sc-htpNat fLtATP"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
         Backup your wallet
      </h2>
      <div
        className="ant-alert ant-alert-warning ant-alert-with-description"
        data-show={true}
        role="alert"
        style={
          Object {
            "marginBottom": "12px",
          }
        }
      >
        <span
          aria-label="exclamation-circle"
          className="anticon anticon-exclamation-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="exclamation-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
        <div
          className="ant-alert-content"
        >
          <div
            className="ant-alert-message"
          />
          <div
            className="ant-alert-description"
          >
            Your seed phrase is the only way to restore your wallet. Write it down. Keep it safe.
          </div>
        </div>
      </div>
      <div
        className="sc-kpOJdX eglhol"
      />
      <h2>
        <span
          aria-label="wallet"
          className="anticon anticon-wallet sc-ifAKCX cYbSut"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="wallet"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 464H528V448h312v128zm0 264H184V184h656v200H496c-17.7 0-32 14.3-32 32v192c0 17.7 14.3 32 32 32h344v200zM580 512a40 40 0 1080 0 40 40 0 10-80 0z"
            />
          </svg>
        </span>
         Manage Wallets
      </h2>
      <button
        className="sc-VigVT RpRhe"
        onClick={[Function]}
      >
        <span
          aria-label="plus-square"
          className="anticon anticon-plus-square"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus-square"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
            />
            <path
              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         New Wallet
      </button>
      <button
        className="sc-jTzLTM bLkbAy"
        onClick={[Function]}
      >
        <span
          aria-label="import"
          className="anticon anticon-import"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="import"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M888.3 757.4h-53.8c-4.2 0-7.7 3.5-7.7 7.7v61.8H197.1V197.1h629.8v61.8c0 4.2 3.5 7.7 7.7 7.7h53.8c4.2 0 7.7-3.4 7.7-7.7V158.7c0-17-13.7-30.7-30.7-30.7H158.7c-17 0-30.7 13.7-30.7 30.7v706.6c0 17 13.7 30.7 30.7 30.7h706.6c17 0 30.7-13.7 30.7-30.7V765.1c0-4.3-3.5-7.7-7.7-7.7zM902 476H588v-76c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-76h314c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
         Import Wallet
      </button>
      <div
        className="sc-kpOJdX eglhol"
      />
      [
      <a
        className="sc-jzJRlG lcaLuD"
        href="https://docs.cashtabapp.com/docs/"
        rel="noreferrer"
        target="_blank"
        type="link"
      >
        Documentation
      </a>
      ]
    </div>
  </div>
</div>
`;
